[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sabr-option-pricing-conditional-mc"
version = "0.2.0"
description = "Monte Carlo pricing under the SABR and CEV-Heston models, with martingale-preserving conditional simulation, exact CEV sampling, and Islah-baseline comparisons."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "MATH 5030 Project Team" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "pyfeng>=0.2.9",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
Repository = "https://github.com/PXYE-1029/SABR-Option-Pricing-Conditional-MC"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
